--- a/angular-movies/src/app/app.component.html
+++ b/angular-movies/src/app/app.component.html
@@ -1,2 +1,5 @@
-{{title}}
-<app-movies-list></app-movies-list>
+<h2>In Theater</h2>
+<app-movies-list [movies] = "inTheaters" ></app-movies-list>
+
+<h2>Future release</h2>
+<app-movies-list [movies] = "futureReleases"></app-movies-list>
