--- a/angular-movies/src/app/app.component.html
+++ b/angular-movies/src/app/app.component.html
@@ -1,5 +1,8 @@
-<h2>In Theater</h2>
+<input type="file" style="display: none;" #uploader>
+<button (click)="uploader.click()">Upload</button>
+
+<!-- <h2>In Theater</h2>
 <app-movies-list [movies] = "inTheaters" ></app-movies-list>
 
 <h2>Future release</h2>
-<app-movies-list [movies] = "futureReleases"></app-movies-list>
+<app-movies-list [movies] = "futureReleases"></app-movies-list> -->
